PolyXpress/logfiles/nodeLog20150521.08.21.txt
mhlog: [Thu May 21 2015 21:07:39 GMT-0700 (PDT)] Message: Running locally
mhlog: [Thu May 21 2015 21:07:40 GMT-0700 (PDT)] Message: fbAppId = 303583989772545
mhlog: [Thu May 21 2015 21:07:40 GMT-0700 (PDT)] Message: twAppId = x2Ze9sSdkMscV1KkMXLiUwJLF
mhlog: [Thu May 21 2015 21:07:40 GMT-0700 (PDT)] Message: gAppId = 84453235164-cbffj609lhqphholm06mpq1emkhmirr5.apps.googleusercontent.com

/Users/dcreel121/Thesis3/PolyXpress/routes/routesSocial.js:54
        return models.UserModel.findOne({facebook.id: req.params.id}, function
                                                 ^
SyntaxError: Unexpected token .
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/Users/dcreel121/Thesis3/PolyXpress/app.js:48:1)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
